# taskiq-examples

aiohttp-app/: Dockerfile
fastapi-app/: Dockerfile
microservices/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
microservices/app/: __main__.py  broker.py
